[project]
name = "revoubank-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",  
    "python-jose",
    "python-multipart",
    "passlib",
    "bcrypt",
    "click"
]
